err/tkintertable.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Pmw'...
Listing './lib/python3.5/site-packages/Pmw/Pmw_2_0_1'...
Listing './lib/python3.5/site-packages/Pmw/Pmw_2_0_1/bin'...
Listing './lib/python3.5/site-packages/Pmw/Pmw_2_0_1/contrib'...
Listing './lib/python3.5/site-packages/Pmw/Pmw_2_0_1/demos'...
Listing './lib/python3.5/site-packages/Pmw/Pmw_2_0_1/doc'...
Listing './lib/python3.5/site-packages/Pmw/Pmw_2_0_1/lib'...
Listing './lib/python3.5/site-packages/Pmw/Pmw_2_0_1/tests'...
Listing './lib/python3.5/site-packages/Pmw-2.0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tkintertable'...
Compiling './lib/python3.5/site-packages/tkintertable/Filtering.py'...
***   File "./lib/python3.5/site-packages/tkintertable/Filtering.py", line 74
    print re.findall(v1,v2)
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tkintertable/Plot.py'...
***   File "./lib/python3.5/site-packages/tkintertable/Plot.py", line 29
    print 'you need numpy to do statistics'
                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tkintertable/Prefs.py'...
***   File "./lib/python3.5/site-packages/tkintertable/Prefs.py", line 45
    print 'Did not find preferences!!!'
                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tkintertable/TableModels.py'...
***   File "./lib/python3.5/site-packages/tkintertable/TableModels.py", line 64
    print 'reclist does not match data keys'
                                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tkintertable/Tables.py'...
***   File "./lib/python3.5/site-packages/tkintertable/Tables.py", line 568
    print 'found in',row,col
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tkintertable/TablesApp.py'...
***   File "./lib/python3.5/site-packages/tkintertable/TablesApp.py", line 205
    print 'skipping'
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tkintertable/Testing.py'...
***   File "./lib/python3.5/site-packages/tkintertable/Testing.py", line 154
    print '%s found' %len(vals)
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tkintertable-1.2.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
